bookstore-project/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30081
