bookstore-project/k8s/logic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logic
spec:
  selector:
    app: logic
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
