bookstore-project/k8s/bookstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: bookstore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
